--- a/_posts/2014-06-12-php.md
+++ b/_posts/2014-06-12-php.md
@@ -12,7 +12,7 @@ tags: [php]
 1.	php中的0不要随便使用，当定义状态的时候，最好跳过0，使用-1、1、2
 	php是一个弱类型的语言，所以我们开发时可以不在乎变量的类型，这极大的增加了我们的开发速度，但是也带来了一些其他的困扰，例如：in_array这个方法，如果我这样使用：
 	
-	```
+	```php
 	$r = in_array("a", [0]);
 	```
 	
@@ -22,7 +22,7 @@ tags: [php]
 	
 2.	当有很多的分支条件时，尽量先处理错误的情况，例如：
 
-	```
+	```php
 	if (!empty($_POST['username])) {
 		if (!empty($_POST['pssword'])) {
 			if (!empty($_POST['email'])) {
@@ -34,7 +34,7 @@ tags: [php]
 	
 	这个完全可以改写成：
 	
-	```
+	```php
 	if (empty($_POST['username'])) {
 		return false;
 	}
@@ -55,7 +55,7 @@ tags: [php]
 4.	返回值尽量一致，不要一个分支返回string，另外一个分支返回array，这样会给调用者带来苦恼
 5.	如果你的业务要求严谨的逻辑，那么请使用参数类型限定，例如：
 
-	```
+	```php
 	function foo(array $param) {}
 	
 	function boo(FooClass $param) {}
